...

//the preset messages that exist in the messages thread screen
class _MsgThreadScreenState extends State<MsgThreadScreen> {
  final _controller = TextEditingController();

  static const _quickReplies = [
    'Thank you!',
    'I took my medications',
    "I'm feeling well",
    'Call me please',
  ];

  @override
...
